force-app/main/default/objects/Client__c/fields/Client_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Account_Number__c</fullName>
    <externalId>true</externalId>
    <label>Client Account Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>