force-app/main/default/objects/Client__c/fields/Cliente_Nuevo__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Nuevo__c</fullName>
    <label>Cliente Nuevo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>