force-app/main/default/objects/Client__c/fields/Creado_Por_Admin__c.field-meta.xml
<CustomField>
    <fullName>Creado_Por_Admin__c</fullName>
    <label>Creado Por Admin</label>
    <length>10</length>
    <type>Text</type>
</CustomField>